<resources>
    <string name="app_name">Medical_project</string>
    <string name="Drowning" translatable="true">Drowning</string>
    <string name="drown_first_line" translatable="true">"What do I do if I see someone wrestling with drowning in the sea or in the pool?</string>
    <string name="drown_2_line" translatable="true">""If you cannot swim: -""</string>
    <string name="drown_3_line" translatable="true">" If he is conscious, you should follow the following steps: -"</string>
    <string name="drown_4_line" translatable="true">" Never try to jump into the water to save a drowning person."</string>
    <string name="drown_5_line" translatable="true">" Help him by extending your hand, a stick, or a new rod, or throwing a rope to him in the water, then pull him out of the water."</string>
    <string name="drown_6_line" translatable="true">" If the person who is fighting drowning is unconscious, you should follow the following steps:"</string>
    <string name="drown_7_line" translatable="true">" Never try to jump into the water to save a drowning person."</string>
    <string name="drown_8_line" translatable="true">" Ask for help from the crowd, as you may find someone who can swim to help save the drowning."</string>
    <string name="drown_9_line" translatable="true">" Call civil defence or rescue officials at the beach or club."</string>
    <string name="quick_check">Quick check</string>
    <string name="how_should_i_behave_if_i_find_an_adult_child_or_infant_lying_on_the_ground_on_the_public_road">How should I behave if I find an adult, child, or infant lying on the ground on the public road?</string>
    <string name="take_care_of_your_safety_first">Take care of your safety first.</string>
    <string name="never_approach_the_site_of_an_accident_if_it_is_not_safe">Never approach the site of an accident if it is not safe.</string>
    <string name="ask_the_audience_to_get_away_from_the_scene_of_the_accident">Ask the audience to get away from the scene of the accident</string>
    <string name="ask_the_audience_if_one_of_them_is_a_doctor_or_ambulance_technician_to_help_rescue_the_injured">Ask the audience if one of them is a doctor or ambulance technician to help rescue the injured.</string>
    <string name="you_can_request_assistance_from_members_of_the_public_in_following_the_emergency_instructions_that_you_specify_for_them_to_help_save_the_largest_number_of_injured">You can request assistance from members of the public in following the emergency instructions that you specify for them To help save the largest number of injured.</string>
    <string name="make_the_place_safe">Make the place safe.</string>
    <string name="take_care_of_the_safety_of_the_injured">Take care of the safety of the injured.</string>
    <string name="age_group">Age group</string>
    <string name="pulse_rate_per_minute">Pulse rate per minute</string>
    <string name="accurate_respiratory_rate">Accurate respiratory rate</string>
    <string name="adults">Adults</string>
    <string name="_60_100">60-100</string>
    <string name="children">children</string>
    <string name="infants">Infants</string>
    <string name="how_to_examine_the_injured_person">How to examine the injured person:</string>
    <string name="test_the_degree_of_consciousness_to_determine_if_it_is_conscious_or_unconscious">• Test the degree of consciousness to determine if it is conscious or unconscious.</string>
    <string name="ask_the_injured_person_what_is_wrong_with_you_in_a_loud_voice_if_he_does_not_respond_to_the_verbal_stimulus_try_scratching_the_sternum_mid_breastbone_with_your_finger_several_times_while_repeating_your_question">•Ask the injured person what is wrong with you in a loud voice if he does not respond to the verbal stimulus. Try scratching the sternum (mid-breastbone) with your finger several times while repeating your question</string>
    <string name="what_s_wrong_if_he_does_not_respond_to_the_verbal_stimulus_the_sufferer_is_unconscious_and_if_he_responds_to_the_verbal_or_painful_stimulus_the_sufferer_is_conscious">What\'s wrong? If he does not respond to the verbal stimulus, the sufferer is unconscious, and if he responds to the verbal or painful stimulus, the sufferer is conscious.</string>
    <string name="rapid_examination_of_the_unconscious_patient">Rapid examination of the unconscious patient:</string>
    <string name="what_do_i_do_if_it_is_confirmed_that_the_patient_is_not_conscious">What do I do if it is confirmed that the patient is not conscious.</string>
    <string name="follow_the_life_saving_adult_series_as_follows">Follow the life saving adult series as follows:</string>
    <string name="early_call_to_the_ambulance_number_123">•Early call to the ambulance number 123</string>
    <string name="a_breath_test">•a breath test</string>
    <string name="early_cpr_in_case_the_patient_is_not_breathing">•Early CPR in case the patient is not breathing</string>
    <string name="use_of_an_abdominal_defibrillation_device">•Use of an abdominal defibrillation device</string>
    <string name="the_arrival_of_the_ambulance_team">• The arrival of the ambulance team</string>
    <string name="advanced_cardiac_care">• Advanced Cardiac Care</string>
    <string name="breath_test">Breath test:</string>
    <string name="the_patient_s_breathing_is_checked_by_looking_at_the_patient_s_chest_to_monitor_the_rise_and_fall_of_the_chest_the_movement_of_the_chest_downward_and_rising_is_an_indication_of_the_presence_of_a_pulse_so_it_is_sufficient_to_check_breathing_without_the_need_to_check_the_pulse">The patient\'s breathing is checked by looking at the patient\'s chest to monitor the rise and fall of the chest. The movement of the chest downward and rising is an indication of the presence of a pulse, so it is sufficient to check breathing without the need to check the pulse</string>
    <string name="note">Note:</string>
    <string name="the_time_period_for_the_breath_test_is_5_10_seconds">The time period for the breath test is 5-10 seconds.</string>
    <string name="fractures_bruises_and_dislocations">Fractures, bruises and dislocations</string>
    <string name="how_do_i_know_that_the_leg_or_arm_bones_are_broken">How do I know that the leg or arm bones are broken?</string>
    <string name="look_for_signs_of_fractures_such_as">Look for signs of fractures such as:</string>
    <string name="_1_deformation_of_the_limb">1. Deformation of the limb.</string>
    <string name="_2_the_thing_that_happens_when_you_press_its_place">2. The thing that happens when you press its place.</string>
    <string name="_3_shortness_of_the_bones">3. Shortness of the bones.</string>
    <string name="_4_hear_the_crackling_sound_when_trying_to_move_the_broken_person_with_severe_pain">4. Hear the crackling sound when trying to move the broken person with severe pain.</string>
    <string name="_5_seeing_bone_protruding_from_the_open_wounds">5. Seeing bone protruding from the open wounds.</string>
    <string name="what_is_the_importance_of_splints_and_ligaments">What is the importance of splints and ligaments?</string>
    <string name="_1_keeping_the_broken_bones_in_a_state_of_rest_thus_reducing_the_feeling_of_severe_pain">1. Keeping the broken bones in a state of rest, thus reducing the feeling of severe pain.</string>
    <string name="_2_preventing_tissue_damage_surrounding_the_fracture_and_preventing_rupture_of_the_surrounding_blood_vessels_and_nerves">2. Preventing tissue damage surrounding the fracture and preventing rupture of the surrounding blood vessels and nerves.</string>
    <string name="_3_avoid_turning_the_simple_fraction_into_a_double_or_compound_fracture">3. Avoid turning the simple fraction into a double or compound fracture.</string>
    <string name="_4_preventing_the_two_ends_of_the_broken_bone_from_friction_thus_avoiding_the_occurrence_of_pain">4. Preventing the two ends of the broken bone from friction, thus avoiding the occurrence of pain.</string>
    <string name="what_are_the_general_principles_of_splints">What are the general principles of splints?</string>
    <string name="_1_the_joint_located_before_and_after_the_skeletal_injury_is_fixed_for_the_joint_injury_the_bone_present_before_and_after_the_injured_joint_is_fixed">1. The joint located before and after the skeletal injury is fixed, for the joint injury the bone present before and after the injured joint is fixed.</string>
    <string name="_2_remove_and_cut_the_clothes_in_the_injured_area_before_casting">2. Remove and cut the clothes in the injured area before casting.</string>
    <string name="_3_cover_open_injuries_with_a_sterile_pad_before_splinting">3. Cover open injuries with a sterile pad before splinting.</string>
    <string name="_4_fixing_the_limb_in_the_position_in_which_it_was_found_unless_there_was_no_pulse_in_the_distal_limb_of_the_manual_traction_injury_before_the_splint_was_installed">4. Fixing the limb in the position in which it was found, unless there was no pulse in the distal limb of the manual traction injury before the splint was installed.</string>
    <string name="_5_not_to_return_the_bone_from_the_wound_intentionally_into_the_tissues">5. Not to return the bone from the wound intentionally into the tissues.</string>
    <string name="_6_putting_on_the_splint_when_you_suspect_an_injury">6. Putting on the splint when you suspect an injury.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="address">Address</string>
    <string name="governorate">Governorate</string>
    <string name="blood_type">Blood Type</string>
    <string name="are_you_from_the_deaf_and_dumb_category">Are you from the deaf and dumb category?</string>
    <string name="are_you_diabetic">Are you diabetic?</string>
    <string name="are_you_sick_with_blood_pressure">Are you sick with blood pressure?</string>
    <string name="are_you_a_heart_patient">Are you a heart patient?</string>
    <string name="do_you_suffer_from_other_chronic_diseases">Do you suffer from other chronic diseases?</string>
    <string name="enter_the_diseases">Enter the diseases</string>
    <string name="sign_in">sign in</string>
    <string name="poisoning">poisoning</string>
    <string name="what_is_poisoning">What is poisoning?</string>
    <string name="it_is_the_arrival_of_any_toxic_substance_into_the_human_body_that_produces_a_harmful_effect_on_the_vital_body_processes_whether_through_injection_swallowing_or_inhalation">It is the arrival of any toxic substance into the human body that produces a harmful effect on the vital body processes, whether through injection, swallowing or inhalation.</string>
    <string name="what_are_the_methods_of_poisoning">What are the methods of poisoning?</string>
    <string name="first_poisoning_by_ingestion">First: poisoning by ingestion:</string>
    <string name="_1_the_presence_of_burns_around_the_mouth_and_tongue">1. The presence of burns around the mouth and tongue.</string>
    <string name="_2_convulsions">2. Convulsions .</string>
    <string name="_3_the_occurrence_of_tver_in_the_degree_of_consciousness_of_the_patient">3. The occurrence of Tver in the degree of consciousness of the patient.</string>
    <string name="_4_the_presence_of_empty_medicine_bottles_or_bottles_or_chemical_bottles_near_the_injured_person">4. The presence of empty medicine bottles or bottles or chemical bottles near the injured person.</string>
    <string name="how_do_i_treat_a_patient_suffering_from_swallowing_poisoning">How do I treat a patient suffering from swallowing poisoning?</string>
</resources>