<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Drowning"
        android:textColor="#22ACEA"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:src="@drawable/drown"
        android:layout_margin="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_first_line"
        android:textColor="#22ACEA"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_2_line"
        android:textColor="#22ACEA"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_3_line"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_4_line"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_5_line"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_6_line"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_7_line"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_8_line"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:padding="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/drown_9_line"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:padding="5dp"
        />
    </LinearLayout>
</ScrollView>